# Django-Shopping-Cart

./: .env  manage.py  pyproject.toml
Letsshop/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: urls.py  views.py
carts/: models.py  urls.py  views.py
carts/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_colorvariant_quantityvariant_sizevariant_and_more.py  0003_productimage.py
templates/: home.html
